--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.5-1) unstable; urgency=medium
+
+  * use aligner factory in lasroleswap 
+
+ -- German Tischler <gt1@sanger.ac.uk>  Mon, 15 Feb 2016 11:48:29 +0100
+
 lastools (0.0.4-1) unstable; urgency=medium
 
   * fix ChangeLog 
