--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.6-1) unstable; urgency=medium
+
+  * fix locking issue
+
+ -- German Tischler <gt1@sanger.ac.uk>  Mon, 15 Feb 2016 17:01:10 +0100
+
 lastools (0.0.5-1) unstable; urgency=medium
 
   * use aligner factory in lasroleswap 
