--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.8-1) unstable; urgency=medium
+
+  * add -l option for lastobam (output compression level) 
+
+ -- German Tischler <gt1@sanger.ac.uk>  Tue, 16 Feb 2016 14:19:35 +0100
+
 lastools (0.0.7-1) unstable; urgency=medium
 
   * fix use after free issue in lastobam 
