--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.9-1) unstable; urgency=medium
+
+  * update to libmaus2 version 2.0.127 
+
+ -- German Tischler <gt1@sanger.ac.uk>  Thu, 18 Feb 2016 13:46:56 +0100
+
 lastools (0.0.8-1) unstable; urgency=medium
 
   * add -l option for lastobam (output compression level) 
