--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.11-1) unstable; urgency=medium
+
+  * update to libmaus2 version 2.0.131 
+
+ -- German Tischler <gt1@sanger.ac.uk>  Thu, 25 Feb 2016 16:25:47 +0100
+
 lastools (0.0.10-1) unstable; urgency=medium
 
   * add another check for correct read encoding in lastobam
