--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.12-1) unstable; urgency=medium
+
+  * update to libmaus2 version 2.0.132 
+
+ -- German Tischler <gt1@sanger.ac.uk>  Fri, 26 Feb 2016 10:46:39 +0100
+
 lastools (0.0.11-1) unstable; urgency=medium
 
   * update to libmaus2 version 2.0.131 
