--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.13-1) unstable; urgency=medium
+
+  * add bamtolas program
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 29 Feb 2016 16:52:50 +0100
+
 lastools (0.0.12-1) unstable; urgency=medium
 
   * update to libmaus2 version 2.0.132 
