--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.14-1) unstable; urgency=medium
+
+  * quit upon detecting unhandled CIGAR operations in bamtolas
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 29 Feb 2016 18:02:55 +0100
+
 lastools (0.0.13-1) unstable; urgency=medium
 
   * add bamtolas program
