--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.15-1) unstable; urgency=medium
+
+  * add documentation 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 01 Mar 2016 09:24:38 +0100
+
 lastools (0.0.14-1) unstable; urgency=medium
 
   * quit upon detecting unhandled CIGAR operations in bamtolas
