--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+lastools (0.0.16-1) unstable; urgency=medium
+
+  * add swappedLasToBAM.sh script
+  * avoid writing in file EOF blocks in lastobam
+  * fix alignment position by taking front deletions into account in bamtolas 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 19 Apr 2016 11:45:10 +0200
+
 lastools (0.0.15-1) unstable; urgency=medium
 
   * add documentation 
