--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.17-1) unstable; urgency=medium
+
+  * add converter from blasr's default text output to bam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sun, 12 Jun 2016 16:46:22 +0200
+
 lastools (0.0.16-1) unstable; urgency=medium
 
   * add swappedLasToBAM.sh script
