--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.19-1) unstable; urgency=medium
+
+  * remove nonexistent parameter help messages 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 04 Jul 2016 11:48:24 +0200
+
 lastools (0.0.18-1) unstable; urgency=medium
 
   * add help message for -R switch in lastobam
