--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.22-1) unstable; urgency=medium
+
+  * compare a read id instead of b read id in lasmarkprimary
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 05 Jul 2016 13:50:22 +0200
+
 lastools (0.0.21-1) unstable; urgency=medium
 
   * use OverlapData function instead of hard coded constant in lastobam
