--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.23-1) unstable; urgency=medium
+
+  * adapt to new libmaus2 interface for secondary and supplementary flag in lastobam 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 27 Jul 2016 14:50:09 +0200
+
 lastools (0.0.22-1) unstable; urgency=medium
 
   * compare a read id instead of b read id in lasmarkprimary
