--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.24-1) unstable; urgency=medium
+
+  * rewrite computation of secondary and supplementary flags in lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 28 Jul 2016 16:33:07 +0200
+
 lastools (0.0.23-1) unstable; urgency=medium
 
   * adapt to new libmaus2 interface for secondary and supplementary flag in lastobam 
