--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.25-1) unstable; urgency=medium
+
+  * allow reference sequences with indeterminate bases in lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 01 Aug 2016 14:12:38 +0200
+
 lastools (0.0.24-1) unstable; urgency=medium
 
   * rewrite computation of secondary and supplementary flags in lastobam
