--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.27-1) unstable; urgency=medium
+
+  * store chain id and chain link id in lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 02 Aug 2016 17:49:55 +0200
+
 lastools (0.0.26-1) unstable; urgency=medium
 
   * implement reference database trimming support in lastobam
