--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.28-1) unstable; urgency=medium
+
+  * use different function to compute refmap in lastobam to reflect what fasta2DAM produces
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 02 Aug 2016 20:59:09 +0200
+
 lastools (0.0.27-1) unstable; urgency=medium
 
   * store chain id and chain link id in lastobam
