--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.29-1) unstable; urgency=medium
+
+  * fix compilation on systems with different types in min call
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 03 Aug 2016 12:10:08 +0200
+
 lastools (0.0.28-1) unstable; urgency=medium
 
   * use different function to compute refmap in lastobam to reflect what fasta2DAM produces
