--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.30-1) unstable; urgency=medium
+
+  * add documentation for lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 03 Aug 2016 14:38:33 +0200
+
 lastools (0.0.29-1) unstable; urgency=medium
 
   * fix compilation on systems with different types in min call
