--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.31-1) unstable; urgency=medium
+
+  * use dazzler database instead of rescanning reference fasta to compute id mapping
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 03 Aug 2016 17:11:29 +0200
+
 lastools (0.0.30-1) unstable; urgency=medium
 
   * add documentation for lastobam
