--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.32-1) unstable; urgency=medium
+
+  * update to libmaus2 2.0.251
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sun, 07 Aug 2016 21:54:28 +0200
+
 lastools (0.0.31-1) unstable; urgency=medium
 
   * use dazzler database instead of rescanning reference fasta to compute id mapping
