--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.33-1) unstable; urgency=medium
+
+  * create FastA index if required in lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 10 Aug 2016 10:32:36 +0200
+
 lastools (0.0.32-1) unstable; urgency=medium
 
   * update to libmaus2 2.0.251
