--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.34-1) unstable; urgency=medium
+
+  * generate index in blasrtobam if it does not exist
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 25 Aug 2016 10:41:45 +0200
+
 lastools (0.0.33-1) unstable; urgency=medium
 
   * create FastA index if required in lastobam
