--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.35-1) unstable; urgency=medium
+
+  * added call.damapper program 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 20 Sep 2016 17:31:40 +0200
+
 lastools (0.0.34-1) unstable; urgency=medium
 
   * generate index in blasrtobam if it does not exist
