--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.36-1) unstable; urgency=medium
+
+  * fix number of threads passed to lastobam in default case
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 21 Sep 2016 14:25:44 +0200
+
 lastools (0.0.35-1) unstable; urgency=medium
 
   * added call.damapper program 
