--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.37-1) unstable; urgency=medium
+
+  * add documentation for -W and -I switches in call.damapper and create index directory if necessary
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 21 Sep 2016 14:42:28 +0200
+
 lastools (0.0.36-1) unstable; urgency=medium
 
   * fix number of threads passed to lastobam in default case
