--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.39-1) unstable; urgency=medium
+
+  * fix call.damapper for new damapper interface
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 04 Nov 2016 16:36:52 +0100
+
 lastools (0.0.38-1) unstable; urgency=medium
 
   * add programs laschainsort, lasaligntotracepoints and lasfilterquality
