--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.40-1) unstable; urgency=medium
+
+  * fix sort order before calling lastobam in call.damapper
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 04 Nov 2016 16:41:47 +0100
+
 lastools (0.0.39-1) unstable; urgency=medium
 
   * fix call.damapper for new damapper interface
