--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.42-1) unstable; urgency=medium
+
+  * add -i option for lasmerge (read input file names from a given file instead of the command line)
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sun, 20 Nov 2016 00:32:11 +0100
+
 lastools (0.0.41-1) unstable; urgency=medium
 
   * add lasmerge program
