--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.43-1) unstable; urgency=medium
+
+  * fix min call by casting in lasmerge
+  * remove tmp index files in lasmerge
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 25 Nov 2016 14:44:47 +0100
+
 lastools (0.0.42-1) unstable; urgency=medium
 
   * add -i option for lasmerge (read input file names from a given file instead of the command line)
