--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+lastools (0.0.44-1) unstable; urgency=medium
+
+  * add tandemaligner pipeline description
+  * add tandemaligner program
+  * add lasextracttandemrecompute (post processing for lascomputetandem)
+  * add lascomputetandem (post processing tool for datander)
+  * add tspace parameter in bamtolas
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 13 Dec 2016 14:50:27 +0100
+
 lastools (0.0.43-1) unstable; urgency=medium
 
   * fix min call by casting in lasmerge
