--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.45-1) unstable; urgency=medium
+
+  * add lasdedup tool
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 19 Dec 2016 13:56:09 +0100
+
 lastools (0.0.44-1) unstable; urgency=medium
 
   * add tandemaligner pipeline description
