--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.46-1) unstable; urgency=medium
+
+  * add subsampling program
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 06 Jan 2017 11:58:04 +0100
+
 lastools (0.0.45-1) unstable; urgency=medium
 
   * add lasdedup tool
