--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.48-1) unstable; urgency=medium
+
+  * add lassuffixprefix
+  * add SLURM integration for HPC.daligner
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 07 Apr 2017 09:51:49 +0200
+
 lastools (0.0.47-1) unstable; urgency=medium
 
   * add seed parameter in lassubsample
