--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.49-1) unstable; urgency=medium
+
+  * make lassubsample symbol instead of read id based
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sat, 29 Apr 2017 09:39:25 +0200
+
 lastools (0.0.48-1) unstable; urgency=medium
 
   * add lassuffixprefix
