--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.50-1) unstable; urgency=medium
+
+  * add lasreduce
+  * refactoring in lassubsample
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sat, 29 Apr 2017 10:35:56 +0200
+
 lastools (0.0.49-1) unstable; urgency=medium
 
   * make lassubsample symbol instead of read id based
