--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.51-1) unstable; urgency=medium
+
+  * fix ids in lasreduce
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sat, 29 Apr 2017 11:24:26 +0200
+
 lastools (0.0.50-1) unstable; urgency=medium
 
   * add lasreduce
