--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.52-1) unstable; urgency=medium
+
+  * move edited DB in SLURM integration 
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 26 May 2017 11:06:24 +0200
+
 lastools (0.0.51-1) unstable; urgency=medium
 
   * fix ids in lasreduce
