--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.53-1) unstable; urgency=medium
+
+  * add lasfilterlength
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 29 May 2017 08:53:05 +0200
+
 lastools (0.0.52-1) unstable; urgency=medium
 
   * move edited DB in SLURM integration 
