--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.56-1) unstable; urgency=medium
+
+  * add commandpack program
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 10 Aug 2017 08:28:40 +0200
+
 lastools (0.0.55-1) unstable; urgency=medium
 
   * add paftolas program
