--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.57-1) unstable; urgency=medium
+
+  * make SLURM.HPC.daligner produce batches only, not start them
+  * add batch processing related code
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 16 Aug 2017 16:11:49 +0200
+
 lastools (0.0.56-1) unstable; urgency=medium
 
   * add commandpack program
