--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.59-1) unstable; urgency=medium
+
+  * do not link SLURM.HPC.daligner with libslurm
+
+ -- German Tischler <tischler@mpi-cbg.de>  Sun, 20 Aug 2017 23:38:48 +0200
+
 lastools (0.0.58-1) unstable; urgency=medium
 
   * generate mem and thread fields in commandpack
