--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.60-1) unstable; urgency=medium
+
+  * add mem argument for repmask calls
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 22 Aug 2017 09:39:40 +0200
+
 lastools (0.0.59-1) unstable; urgency=medium
 
   * do not link SLURM.HPC.daligner with libslurm
