--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.61-1) unstable; urgency=medium
+
+  * write log file instead of using cerr in commandpack
+  * avoid unneccessary copying in paftolas
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 22 Aug 2017 11:31:21 +0200
+
 lastools (0.0.60-1) unstable; urgency=medium
 
   * add mem argument for repmask calls
