--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.62-1) unstable; urgency=medium
+
+  * do not hold lock while submitting new jobs in commandstart
+  * fix index for default value in commandderive
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 22 Aug 2017 13:29:37 +0200
+
 lastools (0.0.61-1) unstable; urgency=medium
 
   * write log file instead of using cerr in commandpack
