--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.63-1) unstable; urgency=medium
+
+  * start jobs one at a time in commandstart, then reschedule
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 22 Aug 2017 15:50:56 +0200
+
 lastools (0.0.62-1) unstable; urgency=medium
 
   * do not hold lock while submitting new jobs in commandstart
