--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.65-1) unstable; urgency=medium
+
+  * write back data after processing in commandprime
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 22 Aug 2017 22:01:18 +0200
+
 lastools (0.0.64-1) unstable; urgency=medium
 
   * remove job logs after successful job execution in commandfollowup
