--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.66-1) unstable; urgency=medium
+
+  * print complete command line for failing command in SLURM.HPC.daligner
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 23 Aug 2017 09:03:56 +0200
+
 lastools (0.0.65-1) unstable; urgency=medium
 
   * write back data after processing in commandprime
