--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.67-1) unstable; urgency=medium
+
+  * allow query and target databases to be separate in paftolas
+  * remove log files for succesful jobs even in partial failure case in commandfollowup
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 23 Aug 2017 11:41:26 +0200
+
 lastools (0.0.66-1) unstable; urgency=medium
 
   * print complete command line for failing command in SLURM.HPC.daligner
