--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.68-1) unstable; urgency=medium
+
+  * add check for COMMAND_PARTITION env variable in commandstart
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 24 Aug 2017 13:34:26 +0200
+
 lastools (0.0.67-1) unstable; urgency=medium
 
   * allow query and target databases to be separate in paftolas
