--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.69-1) unstable; urgency=medium
+
+  * count unfinished jobs and quit if none
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 04 Sep 2017 12:59:27 +0200
+
 lastools (0.0.68-1) unstable; urgency=medium
 
   * add check for COMMAND_PARTITION env variable in commandstart
