--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.72-1) unstable; urgency=medium
+
+  * add full comparator sort mode for lassort
+  * add viewmasks programs
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 10 Oct 2017 10:08:51 +0200
+
 lastools (0.0.71-1) unstable; urgency=medium
 
   * refactor symmetry check
