--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+lastools (0.0.74-1) unstable; urgency=medium
+
+  * add error rate filter in lasfilterlength
+  * add sorting in lasdedup/lassimplededup
+  * add lassimplededup
+  * merge overlapping alignments in lasdedup
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 16 Oct 2017 13:29:54 +0200
+
 lastools (0.0.73-1) unstable; urgency=medium
 
   * fix empty blocks in commandpack
