--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.75-1) unstable; urgency=medium
+
+  * check whether input databases are split in lastobam
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 25 Oct 2017 15:02:26 +0200
+
 lastools (0.0.74-1) unstable; urgency=medium
 
   * add error rate filter in lasfilterlength
