--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.76-1) unstable; urgency=medium
+
+  * add aidapos sort mode in lassort
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 02 Nov 2017 09:23:54 +0100
+
 lastools (0.0.75-1) unstable; urgency=medium
 
   * check whether input databases are split in lastobam
