--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.77-1) unstable; urgency=medium
+
+  * add laschangetspace and lascheck programs
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 03 Nov 2017 12:47:33 +0100
+
 lastools (0.0.76-1) unstable; urgency=medium
 
   * add aidapos sort mode in lassort
