--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.78-1) unstable; urgency=medium
+
+  * add lasproject and lasshow
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 09 Nov 2017 20:16:40 +0100
+
 lastools (0.0.77-1) unstable; urgency=medium
 
   * add laschangetspace and lascheck programs
