--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.81-1) unstable; urgency=medium
+
+  * store subsampling information in FastA output
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 23 Nov 2017 14:02:37 +0100
+
 lastools (0.0.80-1) unstable; urgency=medium
 
   * add verbose output in laschecksymmetry
