--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.84-1) unstable; urgency=medium
+
+  * write progress information in slurmcontrol
+  * write additional fields in command pack
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 04 Dec 2017 11:52:37 +0100
+
 lastools (0.0.83-1) unstable; urgency=medium
 
   * compile with older epoll interface
