--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.85-1) unstable; urgency=medium
+
+  * add full comparator option for lasmerge
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 04 Dec 2017 14:02:37 +0100
+
 lastools (0.0.84-1) unstable; urgency=medium
 
   * write progress information in slurmcontrol
