--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.86-1) unstable; urgency=medium
+
+  * avoid decoding whole database in laschangetspace
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 05 Dec 2017 12:02:40 +0100
+
 lastools (0.0.85-1) unstable; urgency=medium
 
   * add full comparator option for lasmerge
