--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.87-1) unstable; urgency=medium
+
+  * add workerthreads option in slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 05 Dec 2017 16:28:11 +0100
+
 lastools (0.0.86-1) unstable; urgency=medium
 
   * avoid decoding whole database in laschangetspace
