--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.88-1) unstable; urgency=medium
+
+  * check current directory upon starting new job in slurmcontrol/slurmworker
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 06 Dec 2017 09:49:01 +0100
+
 lastools (0.0.87-1) unstable; urgency=medium
 
   * add workerthreads option in slurmcontrol
