--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+lastools (0.0.91-1) unstable; urgency=medium
+
+  * add lasdeepcheck
+  * add sort checking in lascheck
+  * fix crash in laschangetspace when two different databases are used
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 08 Dec 2017 13:37:21 +0100
+
 lastools (0.0.90-1) unstable; urgency=medium
 
   * handle ignorefail flag in slurmcontrol
