--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.92-1) unstable; urgency=medium
+
+  * remove tmp indices in lasmerge
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 08 Dec 2017 14:36:02 +0100
+
 lastools (0.0.91-1) unstable; urgency=medium
 
   * add lasdeepcheck
