--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.93-1) unstable; urgency=medium
+
+  * catch errors occuring while handling new connection
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 08 Dec 2017 15:16:12 +0100
+
 lastools (0.0.92-1) unstable; urgency=medium
 
   * remove tmp indices in lasmerge
