--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.97-1) unstable; urgency=medium
+
+  * fix use after erase bug in slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 13 Dec 2017 09:31:47 +0100
+
 lastools (0.0.96-1) unstable; urgency=medium
 
   * add filters in lasshow
