--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.98-1) unstable; urgency=medium
+
+  * implement deep sleep in slurmcontrol
+  * add deepsleep flag in commandpack
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 14 Dec 2017 13:32:12 +0100
+
 lastools (0.0.97-1) unstable; urgency=medium
 
   * fix use after erase bug in slurmcontrol
