--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.99-1) unstable; urgency=medium
+
+  * add showcdl
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 14 Dec 2017 14:07:48 +0100
+
 lastools (0.0.98-1) unstable; urgency=medium
 
   * implement deep sleep in slurmcontrol
