--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.101-1) unstable; urgency=medium
+
+  * clean up Makefile
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 14 Dec 2017 14:53:18 +0100
+
 lastools (0.0.100-1) unstable; urgency=medium
 
   * update to libmaus2 version 2.0.432
