--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.102-1) unstable; urgency=medium
+
+  * change default pack size to maximum uint64_t
+  * fix confusing message order in slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 15 Dec 2017 09:25:21 +0100
+
 lastools (0.0.101-1) unstable; urgency=medium
 
   * clean up Makefile
