--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.103-1) unstable; urgency=medium
+
+  * fix packs computation in commandpack
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 15 Dec 2017 10:00:53 +0100
+
 lastools (0.0.102-1) unstable; urgency=medium
 
   * change default pack size to maximum uint64_t
