--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.104-1) unstable; urgency=medium
+
+  * use output/error file containers
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 13:50:50 +0100
+
 lastools (0.0.103-1) unstable; urgency=medium
 
   * fix packs computation in commandpack
