--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.105-1) unstable; urgency=medium
+
+  * pass fd variables when starting command
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 14:03:31 +0100
+
 lastools (0.0.104-1) unstable; urgency=medium
 
   * use output/error file containers
