--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.106-1) unstable; urgency=medium
+
+  * implement copy thread method in slurmworker
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 14:51:22 +0100
+
 lastools (0.0.105-1) unstable; urgency=medium
 
   * pass fd variables when starting command
