--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.108-1) unstable; urgency=medium
+
+  * start copy threads after creating them in slurmworker
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 15:27:40 +0100
+
 lastools (0.0.107-1) unstable; urgency=medium
 
   * fix endless loop in slurmworker
