--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.109-1) unstable; urgency=medium
+
+  * implement immediate flushing interface in slurmworker
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 15:45:03 +0100
+
 lastools (0.0.108-1) unstable; urgency=medium
 
   * start copy threads after creating them in slurmworker
