--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.110-1) unstable; urgency=medium
+
+  * use TempFileNameGenerator to put tmp files in sub dirs in slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 17:09:12 +0100
+
 lastools (0.0.109-1) unstable; urgency=medium
 
   * implement immediate flushing interface in slurmworker
