--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.112-1) unstable; urgency=medium
+
+  * output tmp file base in slurmcontrol when starting job
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 18 Dec 2017 17:35:27 +0100
+
 lastools (0.0.111-1) unstable; urgency=medium
 
   * use TmpFileNameGenerator in more places in slurmcontrol
