--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.113-1) unstable; urgency=medium
+
+  * only enque non-completed tasks at start of slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 20 Dec 2017 09:58:45 +0100
+
 lastools (0.0.112-1) unstable; urgency=medium
 
   * output tmp file base in slurmcontrol when starting job
