--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.116-1) unstable; urgency=medium
+
+  * add lassort2
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 08 Jan 2018 13:32:50 +0100
+
 lastools (0.0.115-1) unstable; urgency=medium
 
   * print complete and finished flags in showcdl
