--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.122-1) unstable; urgency=medium
+
+  * add outfn and errfn fields in RunInfo for slurmworker/slurmcontrol
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 12 Jan 2018 10:37:24 +0100
+
 lastools (0.0.121-1) unstable; urgency=medium
 
   * flush metastream immediately after writing in slurmcontrol
