--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.123-1) unstable; urgency=medium
+
+  * store status in RunInfo
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 12 Jan 2018 13:51:50 +0100
+
 lastools (0.0.122-1) unstable; urgency=medium
 
   * add outfn and errfn fields in RunInfo for slurmworker/slurmcontrol
