--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.125-1) unstable; urgency=medium
+
+  * add lassubset
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 26 Jan 2018 11:37:47 +0100
+
 lastools (0.0.124-1) unstable; urgency=medium
 
   * add lasprojectsorted
