--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.128-1) unstable; urgency=medium
+
+  * iteratively merge multiple in lasbridge
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 15 Feb 2018 12:31:39 +0100
+
 lastools (0.0.127-1) unstable; urgency=medium
 
   * add options/parallelism in lasbridge
