--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.129-1) unstable; urgency=medium
+
+  * check for positive b-range in lasbridge
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 19 Feb 2018 15:19:42 +0100
+
 lastools (0.0.128-1) unstable; urgency=medium
 
   * iteratively merge multiple in lasbridge
