--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.132-1) unstable; urgency=medium
+
+  * add list mode in lassort2
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 21 Feb 2018 11:52:28 +0100
+
 lastools (0.0.131-1) unstable; urgency=medium
 
   * fix output file name in lasblocksplit
