--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.133-1) unstable; urgency=medium
+
+  * update lasdedup
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 21 Feb 2018 16:20:03 +0100
+
 lastools (0.0.132-1) unstable; urgency=medium
 
   * add list mode in lassort2
