--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+lastools (0.0.134-1) unstable; urgency=medium
+
+  * handle exact copies in lasdedup before running fusion
+  * fix unused output parameter in lasdedup
+
+ -- German Tischler <tischler@mpi-cbg.de>  Wed, 21 Feb 2018 17:24:44 +0100
+
 lastools (0.0.133-1) unstable; urgency=medium
 
   * update lasdedup
