--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.136-1) unstable; urgency=medium
+
+  * add lasdedupexact tool
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 01 Mar 2018 13:31:06 +0100
+
 lastools (0.0.135-1) unstable; urgency=medium
 
   * make symkill output symmetric in lasdedup
