--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.137-1) unstable; urgency=medium
+
+  * add another layer of symmetry preservation in lasdedup
+
+ -- German Tischler <tischler@mpi-cbg.de>  Fri, 02 Mar 2018 15:23:45 +0100
+
 lastools (0.0.136-1) unstable; urgency=medium
 
   * add lasdedupexact tool
