--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.142-1) unstable; urgency=medium
+
+  * add parallel merging in lassort2
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 03 May 2018 14:50:52 +0200
+
 lastools (0.0.141-1) unstable; urgency=medium
 
   * remove files moved to hpcsched
