--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.144-1) unstable; urgency=medium
+
+  * remove temporary files in lassort2
+
+ -- German Tischler <tischler@mpi-cbg.de>  Thu, 03 May 2018 16:12:02 +0200
+
 lastools (0.0.143-1) unstable; urgency=medium
 
   * fix parallel merging in lassort2
