--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.145-1) unstable; urgency=medium
+
+  * return EXIT_FAILURE for broken files in lascheck
+
+ -- German Tischler <tischler@mpi-cbg.de>  Mon, 14 May 2018 17:12:42 +0200
+
 lastools (0.0.144-1) unstable; urgency=medium
 
   * remove temporary files in lassort2
