--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+lastools (0.0.146-1) unstable; urgency=medium
+
+  * display haplo flag in lasshow
+
+ -- German Tischler <tischler@mpi-cbg.de>  Tue, 05 Jun 2018 17:14:56 +0200
+
 lastools (0.0.145-1) unstable; urgency=medium
 
   * return EXIT_FAILURE for broken files in lascheck
